--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "18.0.0"
   },
   "devDependencies": {
+    "@types/node": "^17.0.24",
+    "@types/react": "^18.0.5",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5"
   }
